пофискила шрифт в портфолио

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
         </h1>
         <a href="" class="button secondary">Заказать услугу</a>
       </section>
-
       <!--- Особенности работы-->
       <section class="section">
         <h2 class="title">Преимущества</h2>
@@ -80,7 +79,7 @@
         </ul>
       </section>
       <!---Чем занимаются-->
-      <section class="section work">
+      <section class="work">
         <h2 class="title">Чем мы занимаемся</h2>
         <ul class="list">
           <li>
@@ -97,28 +96,28 @@
         </ul>
       </section>
       <!--- team-->
-      <section class="section section-team">
+      <section class="team">
         <h2 class="title">Наша команда</h2>
         <ul class="list">
           <li class="card">
             <img src="./img/img.jpg" alt="фото игорь демьяненко" width="270" />
-            <h3 class="subtitle">Игорь Демьяненко</h3>
-            <p class="text">Product Designer</p>
+            <h3 class="team-subtitle">Игорь Демьяненко</h3>
+            <p class="team-text">Product Designer</p>
           </li>
           <li class="card">
             <img src="./img/img-4.jpg" alt="фотоo Ольга Репина" width="270" />
-            <h3 class="subtitle">Ольга Репина</h3>
-            <p class="text">Frontend Developer</p>
+            <h3 class="team-subtitle">Ольга Репина</h3>
+            <p class="team-text">Frontend Developer</p>
           </li>
           <li class="card">
             <img src="./img/img-5.jpg" alt="фото Николай Тарасов" width="270" />
-            <h3 class="subtitle">Николай Тарасов</h3>
-            <p class="text">Marketing</p>
+            <h3 class="team-subtitle">Николай Тарасов</h3>
+            <p class="team-text">Marketing</p>
           </li>
           <li class="card">
             <img src="./img/img-6.jpg" alt="фото Михаил Ермаков" width="270" />
-            <h3 class="subtitle">Михаил Ермаков</h3>
-            <p class="text">UI Designer</p>
+            <h3 class="team-subtitle">Михаил Ермаков</h3>
+            <p class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
