--- a/portfolio.html
+++ b/portfolio.html
@@ -36,8 +36,8 @@
       </ul>
     </header>
     <main>
-      <!---навигация page-->
-      <section class="section filters list">
+      <!---filters -->
+      <section class="filters list">
         <h1>Наши работы</h1>
         <ul class="list">
           <li><button class="button primary">Все</button></li>
@@ -54,53 +54,70 @@
         </ul>
       </section>
       <!---примеры работ-->
-      <section class="section portfolio">
-        <h2 class="title">Примеры работ</h2>
+      <section class="portfolio">
         <ul class="list">
           <li class="card">
-            <img src="./img2/img-1.jpg" alt="экран с фото" />
-            <h3 class="subtitle">Технокряк</h3>
-            <p class="text">Веб-сайт</p>
+            <a href=""
+              ><img src="./img2/img-1.jpg" alt="экран с фото" />
+              <h2 class="subtitle">Технокряк</h2>
+              <p class="text">Веб-сайт</p></a
+            >
           </li>
           <li class="card">
-            <img src="./img2/img-2.jpg" alt="баскетболисты с мячем" />
-            <h3 class="subtitle">Постер New Orlean vs Golden Star</h3>
-            <p class="text">Дизайн</p>
+            <a href=""
+              ><img src="./img2/img-2.jpg" alt="баскетболисты с мячем" />
+              <h2 class="subtitle">Постер New Orlean vs Golden Star</h2>
+              <p class="text">Дизайн</p></a
+            >
           </li>
           <li class="card">
-            <img src="./img2/img-3.jpg" alt="акула с надписью" />
-            <h3 class="subtitle">Ресторан Seafood</h3>
-            <p class="text">Приложение</p>
+            <a href=""
+              ><img src="./img2/img-3.jpg" alt="акула с надписью" />
+              <h2 class="subtitle">Ресторан Seafood</h2>
+              <p class="text">Приложение</p></a
+            >
           </li>
           <li class="card">
-            <img src="./img2/img-4.jpg" alt="наушники" />
-            <h3 class="subtitle">Проект Prime</h3>
-            <p class="text">Маркетинг</p>
+            <a href=""
+              ><img src="./img2/img-4.jpg" alt="наушники" />
+              <h2 class="subtitle">Проект Prime</h2>
+              <p class="text">Маркетинг</p></a
+            >
           </li>
           <li class="card">
-            <img src="./img2/img-5.jpg" alt="коробочки" />
-            <h3 class="subtitle">Проект Boxes</h3>
-            <p class="text">Приложение</p>
+            <a href=""
+              ><img src="./img2/img-5.jpg" alt="коробочки" />
+              <h2 class="subtitle">Проект Boxes</h2>
+              <p class="text">Приложение</p></a
+            >
           </li>
           <li class="card">
-            <img src="./img2/img-6.jpg" alt="монитор" />
-            <h3 class="subtitle">Inspiration has no Borders</h3>
-            <p class="text">Веб-сайт</p>
+            <a href=""
+              ><img src="./img2/img-6.jpg" alt="монитор" />
+              <h2 class="subtitle">Inspiration has no Borders</h2>
+              <p class="text">Веб-сайт</p></a
+            >
           </li>
           <li class="card">
-            <img src="./img2/img-7.jpg" alt="открытый журнал" />
-            <h3 class="subtitle">Издание Limited Edition</h3>
-            <p class="text">Дизайн</p>
+            <a href=""
+              ><img src="./img2/img-7.jpg" alt="открытый журнал" />
+              <h2 class="subtitle">Издание Limited Edition</h2>
+              <p class="text">Дизайн</p></a
+            >
           </li>
           <li class="card">
-            <img src="./img2/img-8.jpg" alt="бирка" />
-            <h3 class="subtitle">Проект LAB</h3>
-            <p class="text">Маркетинг</p>
+            <a href=""
+              ><img src="./img2/img-8.jpg" alt="бирка" />
+              <h2 class="subtitle">Проект LAB</h2>
+              <p class="text">Маркетинг</p></a
+            >
           </li>
           <li class="card">
-            <img src="./img2/img-9.jpg" alt="ноутбук" />
-            <h3 class="subtitle">Growing Business</h3>
-            <p class="text">Приложение</p>
+            <a href=""
+              ><img src="./img2/img-9.jpg" alt="ноутбук" />
+              <h2 class="subtitle">Growing Business</h2>
+              <p class="text">Приложение</p></a
+            >
           </li>
         </ul>
       </section>
